ISYED - genearting token with RSA key